<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_number_1_label"
        android:key="@string/pref_number_1_key"
        android:defaultValue="@string/pref_number_default"
        android:inputType="text"
        android:singleLine="true" />

    <EditTextPreference
        android:title="@string/pref_number_2_label"
        android:key="@string/pref_number_2_key"
        android:defaultValue="@string/pref_number_default"
        android:inputType="text"
        android:singleLine="true" />

    <EditTextPreference
        android:title="@string/pref_number_3_label"
        android:key="@string/pref_number_3_key"
        android:defaultValue="@string/pref_number_default"
        android:inputType="text"
        android:singleLine="true" />

</PreferenceScreen>